--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.eucyt.rashimban
-pluginName = rashimban
+pluginName = Rashimban
 pluginRepositoryUrl = https://github.com/eucyt/rashimban
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
